hphp/test/zend/good/Zend/tests/bug47699.php.expectf
BB
Fatal error: Class undefined: X in %s/bug47699.php on line 11
